<?xml version="1.0"?>
<package>
  <name>mc_log_visualization</name>
  <version>1.1.0</version>
  <description>Visualize logs obtained from mc_rtc in RViz</description>

  <maintainer email="pierre.gergondet@gmail.com">Pierre Gergondet</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>mc_rtc</build_depend>
  <build_depend>mc_rtc_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>mc_rtc</run_depend>
  <run_depend>mc_rtc_msgs</run_depend>
</package>
