<?xml version="1.0"?>
<package>
  <name>mc_rtc_ros</name>
  <version>0.1.1</version>
  <description>ROS tools for mc_rtc</description>
  <maintainer email="pierre.gergondet@gmail.com">Pierre Gergondet</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>mc_log_visualization</run_depend>
  <run_depend>mc_rtc_msgs</run_depend>
  <run_depend>mc_rtc_ticker</run_depend>
  <run_depend>sch_visualization_ros</run_depend>
  <export>
    <metapackage/>
  </export>
</package>
