<?xml version="1.0"?>
<package>
  <name>mc_rtc_ros</name>
  <version>1.6.1</version>
  <description>ROS tools for mc_rtc</description>
  <maintainer email="arn.tanguy@gmail.com">Arnaud Tanguy</maintainer>
  <maintainer email="pierre.gergondet@gmail.com">Pierre Gergondet</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>mc_rtc_msgs</run_depend>
  <run_depend>mc_rtc_ticker</run_depend>
  <export>
    <metapackage/>
  </export>
</package>
