<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mc_rtc_rviz_panel</name>
  <version>1.6.1</version>
  <description>mc_rtc generic edition panel</description>
  <maintainer email="arn.tanguy@gmail.com">Arnaud Tanguy</maintainer>
  <maintainer email="pierre.gergondet@gmail.com">Pierre Gergondet</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/jrl-umi3218/mc_rtc_ros</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rviz2</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
