<?xml version="1.0"?>
<package>
  <name>mc_surfaces_visualization</name>
  <version>0.0.1</version>
  <description>Visualize contact surfaces in RVIz</description>

  <maintainer email="h.audren@gmail.com">haudren</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>tf</run_depend>
</package>
