<package>
  <name>mc_tcp_msgs</name>
  <description>mc_tcp_msgs</description>
  <version>0.1.0</version>
  <author>Pierre Gergondet</author>
  <maintainer email="pierre.gergondet@gmail.com">Pierre Gergondet</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/mc_tcp_msgs</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>


